# OSH-2020-Labs

./: .gitignore  README.md
lab1/docs/: README.md
lab1/linux/: .config  bzImage
lab1/linux/src/initrd1/: init.c
lab1/linux/src/initrd2/: init.c
lab1/mbr/: mbr.asm
lab2/: Cargo.toml  README.md
lab2/src/: builtin.rs  error.rs  exec.rs  executor.rs  lib.rs  main.rs  parse.rs  parser.rs
lab3/: .gitignore  CMakeLists.txt  README.md
lab3/src/comm/: accsoc.hpp  srvsoc.hpp
lab3/src/mp/: main.cpp  srvsoc.hpp
lab3/src/mt/: main.cpp  srvop.hpp
lab4/: .gitignore  Cargo.toml  README.md
lab4/src/: cntr.rs  consts.rs  host.rs  lib.rs  main.rs
