[package]
name = "cntrs"
version = "0.1.0"
authors = ["myl7 <myl.ustc@gmail.com>"]
edition = "2018"

[dependencies]
nix = "0.17"
# Rust friendly bindings to *nix APIs.
libc = "0.2"
# Raw bindings to platform APIs for Rust. For `syscall`.
rand = "0.7"
# Random number generators and other randomness functionality. To gen temp dir.
